# vc-brain

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  cli.py  pyproject.toml  render.yaml
.impeccable/: design.json
app/: activate.py  cache.py  config.py  deck_pdf.py  instrument.py  llm.py  memo_pdf.py  promptlib.py  query.py  ratelimit.py  seed.py  server.py
config/: thesis_alt.yaml  thesis_my_fund.yaml  thesis_preseed_ai_infra.yaml
docs/: ARCHITECTURE.md  EVAL.md  SUBMISSION.md  TICKETS.md  judge-evaluation.md  judge-guide.md  submission-description.md  target-memos.md  vc-brain-spec.md
fixtures/: README.md  seed_db.sqlite  sourcing_reference.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
prompts/: activate.md  adj_defender.md  adj_judge.md  adj_prosecutor.md  ask_memo.md  critic.md  debate_bear.md  debate_bull.md  debate_judge.md  founder_summary.md  market_category.md  nl_query.md  rubric_founder.md  rubric_idea.md  rubric_market.md  screen_first_pass.md  synthesizer.md  worker_founder.md  worker_market.md  worker_news.md  worker_risk.md  worker_traction.md
scripts/: audit_merges.py  migrate_claims.py  push_founder.py  rebuild_demo.py  seed.py  seed_real_company.py  smoke.py
tests/: conftest.py  test_claim_subject.py  test_decision.py  test_deck_pdf.py  test_diligence.py  test_founder_score.py  test_integrity_gate.py  test_launchtracker.py  test_memory.py  test_network_outcomes.py  test_query_api.py  test_query_geo.py  test_resolve.py  test_screening.py  test_sourcing.py  test_tavily.py  (+2 more)
(+62 files in other folders)
