[project]
name = "vc-brain"
version = "0.1.0"
description = "Evidence-first sourcing & diligence engine (hackathon)"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "openai",
    "pydantic>=2",
    "fastapi",
    "uvicorn",
    "httpx",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["app", "app.memory"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
