[project]
name = "vc-brain"
version = "0.1.0"
description = "Evidence-first sourcing & diligence engine (hackathon)"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "openai",
    "pydantic>=2",
    "fastapi",
    "uvicorn",
    "httpx",
    "pyyaml",
    "python-dotenv>=1.2.2",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "tavily-python>=0.7.26",
    "reportlab>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
